--- a/RepositoryPatternImplementation/appsettings.json
+++ b/RepositoryPatternImplementation/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyMDBContext": "Server=(localdb)\\mssqllocaldb;Database=MyMDBContext-a873039e-6fd9-4c48-af1b-a4c8a1c5f56b;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
